--- a/src/components/menu-list-item/menu-list-item.scss
+++ b/src/components/menu-list-item/menu-list-item.scss
@@ -1,3 +1,7 @@
+a {
+    color: black;
+    text-decoration: none;
+}
 .menu {
     &__item {
         width: 350px;
@@ -25,6 +29,10 @@
         font-size: 18px;
         font-weight: 300;
         margin-bottom: 10px;
+        &_icon {
+            width: 35px;
+            height: 35px;
+        }
         span {
             font-weight: 700;
         }
