--- a/src/components/menu-list-item/menu-list-item.scss
+++ b/src/components/menu-list-item/menu-list-item.scss
@@ -46,5 +46,8 @@ a {
         color: #fff;
         font-size: 16px;
         cursor: pointer;
+        &:active {
+            background-color: chartreuse;
+        }
     }
 }
